# microBioRust

./: .gitignore  404.html  CONTRIBUTING.md  Cargo.toml  README.md  index.html  index.json  info.json  regressions.json  regressions.xml  sitemap.xml
.github/workflows/: python-app.yml  release.yml
graphs/biopython/branch-main/codecarbon/machine-github-runner/maturin/python-3.12/: bench_pipeline.PipelineSuite.peakmem_process_all.json  bench_pipeline.PipelineSuite.time_process_all.json  bench_pipeline.PipelineSuite.track_energy.json  bench_pipeline.PipelineSuite.track_parsing_latency.json  summary.json
graphs/biopython/branch-main/machine-github-runner/python-3.12/: bench_pipeline.PipelineSuite.peakmem_process_all.json  bench_pipeline.PipelineSuite.time_process_all.json  bench_pipeline.PipelineSuite.track_parsing_latency.json  summary.json
graphs/branch-main/machine-github-runner/python-3.12/: bench_pipeline.PipelineSuite.peakmem_process_all.json  bench_pipeline.PipelineSuite.time_process_all.json  bench_pipeline.PipelineSuite.time_process_all_iterations.json  bench_pipeline.PipelineSuite.track_parsing_latency.json  summary.json
graphs/summary/: bench_pipeline.PipelineSuite.peakmem_process_all.json  bench_pipeline.PipelineSuite.time_process_all.json  bench_pipeline.PipelineSuite.time_process_all_iterations.json  bench_pipeline.PipelineSuite.track_energy.json  bench_pipeline.PipelineSuite.track_parsing_latency.json
installation/: index.html
microBioRust/: Cargo.toml  new_output_embl.gbk
microBioRust/examples/: blast_parse.rs  convert_to_faa.rs
microBioRust/src/: embl.rs  gbk.rs  record.rs
microBioRust/tests/: embl_to_faa.rs  embl_to_ffn.rs  embl_to_gff.rs  genbank_to_faa.rs  genbank_to_ffn.rs  genbank_to_gff.rs  new_output_embl.gbk
microBioRust/tests/data/: README.md
microbiorust-py/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  Rhiz3841.gbk.gb.gff  bp_gbk2faa.py  for_pip_publ.txt  pyproject.toml  rhiz_through_parse.faa  rust_via_python_gbk2faa.py
microbiorust-py/benchmarks/: bench_pipeline.py  bp_equivalent_gbktofaacount.py
microbiorust-py/microbiorust/: __init__.py  __init__.pyi  _microbiorust.pyi  align.pyi  blast.pyi  embl.pyi  gbk.pyi  seqmetrics.pyi
microbiorust-py/src/: lib.rs  macros.rs
microbiorust-py/tests/: test_mbr.py
results/: 11e946b4-virtualenv-py3.12.json  78d4e7be-virtualenv-py3.12.json  a45e179a-virtualenv-py3.12.json  benchmarks.json  f527f110-virtualenv-py3.12.json
results/github-runner/: 02a516ce-virtualenv-py3.12.json  0437e758-virtualenv-py3.12-biopython-codecarbon-maturin.json  04718394-virtualenv-py3.12.json  060f9e0c-virtualenv-py3.12-biopython-codecarbon-maturin.json  095e8fd1-virtualenv-py3.12-biopython-codecarbon-maturin.json  0dc48c1e-virtualenv-py3.12.json  10cd27c2-virtualenv-py3.12.json  110cf215-virtualenv-py3.12-biopython-codecarbon-maturin.json  1308ba83-virtualenv-py3.12-biopython-codecarbon-maturin.json  176e2987-virtualenv-py3.12.json  19cd1806-virtualenv-py3.12.json  1ec67e29-virtualenv-py3.12.json  2a50960f-virtualenv-py3.12.json  31617e01-virtualenv-py3.12-biopython-codecarbon-maturin.json  31adb4c5-virtualenv-py3.12.json  33d6e257-virtualenv-py3.12-biopython-codecarbon-maturin.json  3fa6aca4-virtualenv-py3.12-biopython.json  425c966e-virtualenv-py3.12.json  441a85d4-virtualenv-py3.12.json  483a7679-virtualenv-py3.12.json  4842a7da-virtualenv-py3.12.json  4bb3a8b0-virtualenv-py3.12-biopython-codecarbon-maturin.json  5051b644-virtualenv-py3.12.json  53383716-virtualenv-py3.12.json  554ad11c-virtualenv-py3.12-biopython.json  5a1d74f9-virtualenv-py3.12.json  5a4152b8-virtualenv-py3.12-biopython-codecarbon-maturin.json  5d29ff8a-virtualenv-py3.12-biopython-codecarbon-maturin.json  641607c6-virtualenv-py3.12-biopython.json  64dddd5a-virtualenv-py3.12.json  6eb6b7a9-virtualenv-py3.12-biopython-codecarbon-maturin.json  71b1f5e4-virtualenv-py3.12-biopython.json  73cd15c9-virtualenv-py3.12-biopython-codecarbon-maturin.json  77f17eca-virtualenv-py3.12-biopython-codecarbon-maturin.json  7c805937-virtualenv-py3.12.json  80c519dd-virtualenv-py3.12-biopython.json  87fd74b2-virtualenv-py3.12.json  8bca8228-virtualenv-py3.12-biopython-codecarbon-maturin.json  8e47d9fd-virtualenv-py3.12-biopython-codecarbon-maturin.json  93b576a3-virtualenv-py3.12-biopython.json  (+31 more)
seqmetrics/: Cargo.toml
usage/: index.html
windows_install/: index.html
