[package]
name = "microBioRust"
version = "0.1.4"
edition = "2024"
license = "MIT"
keywords = ["bioinformatics", "micro", "bio", "genomics", "sequence-analysis"]
description = "Microbiology friendly bioinformatics Rust functions"
categories = [
    "science::bioinformatics::sequence-analysis",
    "science::bioinformatics::genomics",
    "science::bioinformatics",
    "science",
    "data-structures",
]
readme = "README.md"
authors = ["Lisa Crossman and microBioRust community"]
exclude = [".git", ".gitignore", ".dribble.example.embl", "tests/", "src/bin","config.toml","K12_ribo.gbk","Rhiz3841.gbk.gb","Rhiz3841.gbk.gb_out.faa","rust_via_python_countgbk2faa.py","rust_via_python_gbk2faa.py","asv.conf.json","benchmarks/"]
repository = "https://github.com/microBioRust/microBioRust"
documentation = "https://microbiorust.github.io/docs/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lints.rust]
unsafe_code = "forbid"

[lib]
path = "src/lib.rs"

[[example]]
name = "blast-example"
path = "examples/blast_parse.rs"

[[example]]
name = "convert-to-faa"
path = "examples/convert_to_faa.rs"

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
paste = "1.0"
itertools = "0.14.0"
protein-translate = "0.2.0"
bio = "3.0.0"
anyhow = "1.0"
thiserror = "2.0.12"
regex = "1.5"
chrono = "0.4.38"
lazy_static = "1.5"
tokio = { version = "1.48.0", features = ["full"] }
quick-xml = { version = "0.38.4", features = ["async-tokio", "escape-html"] }
async-compression = { version = "0.4.35", features = ["tokio", "gzip"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
flate2 = "1.1.5"
futures = "0.3.31"

