[workspace]

[package]
name = "microbiorust-py"
version = "0.1.5"
edition = "2021"
license = "MIT"
keywords = ["bioinformatics","micro","bio","genomics","sequence-analysis"]
description = "Python bindings for microBioRust Microbiology friendly bioinformatics Rust functions"
categories = ["science::bioinformatics::sequence-analysis", "science::bioinformatics::genomics", "science::bioinformatics","science","data-structures"]
exclude = [".git",".gitignore"]
repository = "https://github.com/microBioRust/microBioRust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lints.rust]
unsafe_code = "forbid"

[lib]
name = "microbiorust"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.25.0" 
features = ["extension-module", "abi3-py310"]

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[dependencies]
microBioRust = "0.1.3"
microBioRust-seqmetrics = "0.1.3"
pythonize = "0.25"
tokio = { version = "1.49.0", features = ["full"] }

