[workspace]

[package]
name = "microbiorust-py"
version = "0.1.6"
edition = "2024"
license = "MIT"
keywords = ["bioinformatics","micro","bio","genomics","sequence-analysis"]
description = "Python bindings for microBioRust Microbiology friendly bioinformatics Rust functions"
categories = ["science::bioinformatics::sequence-analysis", "science::bioinformatics::genomics", "science::bioinformatics","science","data-structures"]
exclude = [".git",".gitignore","src/bin","config.toml","K12_ribo.gbk","Rhiz3841.gbk.gb","Rhiz3841.gbk.gb_out.faa","rust_via_python_countgbk2faa.py","rust_via_python_gbk2faa.py","asv.conf.json","benchmarks/"]
repository = "https://github.com/microBioRust/microBioRust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lints.rust]
unsafe_code = "forbid"

[lib]
name = "_microbiorust"
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "0.26.0"
features = ["abi3-py310"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
microBioRust = "0.1.4"
microBioRust-seqmetrics = "0.1.3"
pythonize = "0.26"
pyo3-stub-gen = "0.17.2" 
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
