[build-system]
# This tells pip: "Use Maturin to build this, not setuptools"
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "microbiorust"
dynamic = ["version"]
# Valid python versions
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
]
dependencies = []
 
[tool.maturin]
manifest-path = "Cargo.toml"
bindings = "pyo3"
module-name = "microbiorust"
features = ["pyo3/extension-module","pyo3/abi3-py310"]
