[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "microbiorust"
dynamic = ["version"]
#valid python versions
requires-python = ">=3.10"
readme = "README.md"
authors = [
    { name = "LCrossman" },
    { name = "microBioRust Community" }
]
description = "Python bindings for microbiorust, Microbiology friendly bioinformatics functions"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
]
[project.urls]
Homepage = "https://microbiorust.github.io/docs/"
Repository = "https://github.com/microBioRust/microBioRust"
"Bug Tracker" = "https://github.com/microBioRust/microBioRust/issues"
 
[tool.maturin]
manifest-path = "Cargo.toml"
bindings = "pyo3"
module-name = "microbiorust._microbiorust"
python-source = "."
features = ["pyo3/extension-module"]
include = [
   "microbiorust/*.pyi",
   "microbiorust/py.typed"
]
exclude = ["src/bin/*", "benchmarks/*", "tests/*"]

[tool.ruff]
line-length = 127

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403", "F405"]

[tool.ruff.lint]
select = ["E", "F", "C901"]

[tool.ruff.lint.mccabe]
max-complexity = 10
